# mcp-esa-server-python

./: .env.example  LICENSE  README.md  esa_client.py  main.py  pyproject.toml
.cursor/rules/: mcp-server.mdc
.github/workflows/: python-ci.yml
docs/: api_client_spec.md  mcp_esa_development_summary.md  mcp_esa_server_usage.md
src/mcp_esa_server/: __init__.py  esa_client.py  server.py
tests/: test_esa_client.py  test_main_tools.py
tests/integration/: test_esa_client_integration.py
